[package]
name = "payment_engine"
version = "0.1.0"
authors = ["Rodrigo Nogueira <raanogueira@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"] }
rust_decimal = "1.17.0"